--- a/scootsrentals/styles/large.css
+++ b/scootsrentals/styles/large.css
@@ -18,20 +18,11 @@
         display: block;
     }
 
-    #container-home {
-        width: 90%;
-        display: grid;
-        grid-template-columns: auto 1fr;
-        /* Left side takes up auto width, right side takes up remaining space */
-        gap: 20px;
-        /* Gap between columns */
-    }
-
     .cta-button {
         margin-left: 10px;
     }
 
-    section {
+    #container-home section {
         margin: 10px;
         padding: 10px;
         border: solid 2px #000;
@@ -43,9 +34,10 @@
         padding: 5px;
     }
 
-    main {
+    #container-home {
+        margin: auto;
         display: grid;
-        grid-template-columns: auto 1fr;
+        grid-template-columns: 1fr 1fr;
         /* Two columns: one for rental-section and one for social-section & weather-section */
         grid-gap: 20px;
         /* Adjust the gap between grid items */
